--- a/src/css/adoc/admonition-block.css
+++ b/src/css/adoc/admonition-block.css
@@ -47,7 +47,7 @@
     &::before {
       background-image: url(../img/icons/caution.svg);
       color: color-mod(var(--red-3) lightness(40%));
-      content: 'CAUTION';
+      content: '注意';
     }
   }
 
@@ -58,18 +58,18 @@
     &::before {
       background-image: url(../img/icons/important.svg);
       color: color-mod(var(--yellow-3) lightness(40%));
-      content: 'IMPORTANT';
+      content: '重要';
     }
   }
 
   &.note tbody::before {
     background-image: url(../img/icons/note.svg);
-    content: 'NOTE';
+    content: 'メモ';
   }
 
   &.tip tbody::before {
     background-image: url(../img/icons/tip.svg);
-    content: 'TIP';
+    content: 'ヒント';
   }
 
   &.warning tbody {
@@ -79,7 +79,7 @@
     &::before {
       background-image: url(../img/icons/caution.svg);
       color: color-mod(var(--red-3) lightness(40%));
-      content: 'WARNING';
+      content: '警告';
     }
   }
 }
