--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -14,7 +14,7 @@
 <meta name="product" content="{{page.component.title}}">
 <meta name="version" content="{{page.version}}">
 {{> head}}
-<body>
+<body{{#if (includes page.origin.url '-jp')}} lang="jp"{{/if}}>
   {{> body-scripts}}
   <section class="flex col">
   {{> header}}
